styles.css
/* The side navigation menu */
body {
	background-image: url(forest-with-sunlight-158251.jpg);
	background-attachment: fixed;

	margin: 0;
	color: white;
}

#sidebar {
	width: 25%;
	height: 100%;
	margin: 0;
	padding: 0;
	background-color: black;
	position: fixed;
	overflow: auto;
	opacity: 75%;

	display: flex;
	flex-direction: column;
}

/* Sidebar links */
#sidebar a {
	text-align: center;
	width: 80%;
	padding: 26px 0px;

}

/* Active/current link */
#sidebar a.active {
	background-color: gray;
}

/* Links on mouse-over */
#sidebar a:hover:not(.active) {
	background-color: #555;
}

#content {
	margin-left: 25%; /* same as #sidebar width */
	padding: 1px;
}

/* On screens that are less than 700px wide, make the sidebar into a topbar */
@media screen and (max-width: 700px) {
	#sidebar {
		width: 100%;
		height: auto;
		position: relative;
		flex-direction: row;
	}
	#content {
		margin-left: 0;
	}
}

/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
@media screen and (max-width: 400px) {
	#sidebar {
		flex-direction: column;
	}
	#sidebar a {
		width: 100%;
	}
}

.center-items {
	justify-content: center;
	align-items: center;
}

.content-box {
	width: 90%;
	padding: 0px;
	margin: 60px 20px 60px 20px;
	background-color: black;

	display: flex;
}

.about_me h1 {
	justify-content: center;
	margin: 30px auto 30px auto;
	font-size: xxx-large;
}

.about_me p {
	margin: 30px;
}


.box1 {
	width: 66.66%;
}

.box2 {
	width: 33.33%;
}

article div h1 {
	/* border: 1px solid red; */

	padding: 10px;
	margin: 0px;
}

article div p {
	/* border: 1px solid blue; */

	padding: 5px;
	margin: 0px;
}

.container {
	position: relative;
}

/* TODO: this overlap with p */
.bottomright {
	position: absolute;
	bottom: 0px;
	right: 0px;
}

article div a {
	float: right;
	/* border: 2px solid white; */

	color: white;
	padding: 0px;
	margin: 0px;
}

@media screen and (max-width: 1200px) {
	.box1 {
		width: 100%;
		height: auto;
		position: relative;
	}
	.box2 {
		width: 100%;
	}
}


.social_icons {
	display: flex;
	justify-content: center;
}

/* Style all font awesome icons */
.fab {
	font-size: 30px;
	width: 40px;
	text-align: center;
	text-decoration: none;
	color: gray;
  }

/* Add a hover effect if you want */
.fab:hover {
	opacity: 0.7;
}

